# gesture_control

./: CMakeLists.txt  package.xml
launch/: gesture_control.launch  listener.launch  socket.launch
src/: gesture_listener.cpp  socket_communication.cpp
